# squash-the-creeps

./: .gitignore  NOTICE  README.md  cargo-generate.toml
.github/workflows/: verify.yml
docs/: architecture.md  context.md
godot/: rust.gdextension
hooks/: rename.rhai
rust/: Cargo.toml
rust/src/: main_scene.rs  mob.rs
status/: stable.json
