[package]
name = "squash-the-creeps"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MPL-2.0"
publish = false

# Standalone: detached from the upstream demo workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.10"
godot = { git = "https://github.com/godot-rust/gdext.git", rev = "410580d477fe150e12fd9649cf5ab12a800a1884", features = ["register-docs"] }
# For Wasm, feature "experimental-wasm" can be added, but this is already done in build-wasm.sh script.
